--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 
+
 #title{
     background-color: #ff4c68;
     /* background-color: black; */
@@ -6,6 +7,9 @@
     padding-right: 15%;
 }
 
+nav{
+    margin-top: 5%;
+}
 
 nav a {
     color: white !important ;
@@ -46,4 +50,63 @@ nav button{
     height: 100%;
     transform: rotate(30deg);
     /* padding: 30px */
+}
+
+#features{
+    padding-bottom:7% ;
+    padding-top: 7%;
+}
+
+.features i {
+    font-size: 3.5rem;
+    color: #EF8172;
+    margin-left: 45%;
+}
+
+
+.features i:hover {
+    /* font-size: 3rem; */
+    color: #ff4c68;
+}
+
+.features h3 , .features p {
+    text-align: center;
+    /* padding: 10px; */
+}
+
+.features p {
+    padding: 5px 40px;
+    color: #8f8f8f;
+}
+
+#testimonials{
+    background-color: #EF8172;
+    text-align: center;
+    padding: 7% 15%;
+}
+
+#testimonials h2{
+    color: white;
+    line-height: 1.5;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+#testimonials img{
+    border-radius: 100%;
+    margin: 20px;
+    width: 15%;
+}
+
+#press{
+    background-color: #EF8172;
+    text-align: center;
+    padding: 0 15%;
+}
+
+#press img{
+    width: 15%;
+    margin: 20px 15px ;
+    margin-bottom: 50px;
 }
